--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build && echo hanguk.io > docs/CNAME",
     "preview": "vite preview",
-    "format": "prettier --write .",
+    "fix": "eslint . --fix && prettier --write .",
     "check": "eslint . && prettier --check ."
   },
   "dependencies": {
