--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "tsc -b && vite build && echo hanguk.io > docs/CNAME",
     "preview": "vite preview",
     "fix": "eslint . --fix && prettier --write .",
-    "check": "eslint . && prettier --check ."
+    "check": "eslint . && prettier --check .",
+    "validate-json": "node -e \"try { const data = JSON.parse(require('fs').readFileSync('./src/data.json', 'utf8')); console.log('✅ JSON is valid!', data.length, 'districts found'); } catch(e) { console.error('❌ JSON validation failed:', e.message); process.exit(1); }\""
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
