--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "schema": "npx typescript-json-schema src/types.ts Divisions --required --noExtraProps --out src/data.schema.json"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
