--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
     "build": "npm run check && tsc -b && vite build && echo hanguk.io > docs/CNAME",
     "fix": "eslint . --fix && prettier --write .",
     "check": "vitest run && eslint . && prettier --check . && ajv validate -s src/data.schema.json -d src/data.json",
