--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "typescript-json-schema": "^0.65.1",
     "vite": "^7.0.0",
+    "vite-plugin-imagemin": "^0.6.1",
     "vitest": "^3.2.4"
   }
 }
