--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "schema": "npx typescript-json-schema src/types.ts Divisions --required --noExtraProps --out src/data.schema.json"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
