--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
